--- a/strain-search/src/components/css/welcome.css
+++ b/strain-search/src/components/css/welcome.css
@@ -1,11 +1,42 @@
 body{
     background-color: black;
+}
+.welcomePage{
+    background-color: black;
     text-align: center;
-    padding-top: 100px;
+}
+.logo{
+    padding-top: 80px;
+    padding-bottom: 35px;
 }
 .name{
     color: white;
+    padding-bottom: 35px;
+    font-family: 'Bangers', cursive;
+    font-size: 45px;
 }
 .slogan{
     color: white;
+    padding-bottom: 35px;
+    font-size: 25px;
+    font-family: 'Kaushan Script', cursive;
 }
+.startSearch{
+    padding-bottom: 35px;
+    font-family: 'Bangers', cursive;
+}
+.btn-secondary{
+    background-color: purple;
+    color: white;
+    font-family: 'Bangers', cursive;
+    width: 400px;
+    padding: 10px;
+    font-size: 20px;
+    border: none;
+    border-radius: 10px;
+}
+.btn-secondary:hover{
+    background-color: mediumorchid;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Bangers&family=Kaushan+Script&display=swap');
