--- a/strain-search/src/components/css/searchBox.css
+++ b/strain-search/src/components/css/searchBox.css
@@ -24,6 +24,7 @@
     color: #ffffff;
     font-family: 'Kaushan Script', cursive;
     font-size: 30px;
+    margin-bottom: 5px;
 }
 .btn-warning,.btn-info{
     font-family: 'Bangers', cursive;
