--- a/strain-search/src/components/css/dashboard.css
+++ b/strain-search/src/components/css/dashboard.css
@@ -1,14 +1,24 @@
 .dash{
     background-color: black;
-    padding-bottom: 40px;
-    padding-top: 67px;
+    padding-bottom: 30px;
+    padding-top: 55px;
 }
 .SearchAgain{
-    padding-top: 10px;
-    background-color: purple;
     font: black;
     font-size: 20px;
     font-weight: bold;
+}
+.reSearchAgain{
+    background-color: purple;
+    border-radius: 15px;
+    margin-top: 0px;
+    margin-left: 25px;
+    margin-right: 25px;
+    padding-left: 20px;
+    padding-right: 25px;
+}
+.subHead{
+    text-align: center;
 }
 .paragraph{
     background-color: white;
